# scipdf_parser

./: pyproject.toml
scipdf/: models.py
scipdf/pdf/: parse_pdf.py
